--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node_modules/.bin/vite",
-    "dev": "node_modules/.bin/vite",
-    "build": "node_modules/.bin/tsc -b && vite build",
-    "lint": "node_modules/.bin/eslint .",
-    "preview": "node_modules/.bin/vite preview"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@signalwire-community/react": "^1.4.2",
